samples/_failures_safe/1761549840_0d6529_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f9881ee.c: In function ‘main’:
./samples/SAFE/__tmp_8f9881ee.c:158:5: error: expected expression at end of input
  158 |     if (scanf("%d", &node_count) != 1 || node_count < 1 || node_count > MAX_NODES)
      |     ^~
./samples/SAFE/__tmp_8f9881ee.c:158:5: error: expected declaration or statement at end of input
